updated client index page

--- a/app/assets/stylesheets/clients.css.scss
+++ b/app/assets/stylesheets/clients.css.scss
@@ -1,3 +1,12 @@
-// Place all the styles related to the Clients controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.table-bordered{
+	width: 500px;
+}
+.form-control{
+	width: 300px;
+}
+.form_rate{
+	width: 1000px;
+}
+.btn-default{
+	margin-left: 230px
+}
