--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,2 +1,50 @@
-<h1>Clients#index</h1>
-<p>Find me in app/views/clients/index.html.erb</p>
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+	<form action="/clients" method="post">
+		<h3>Add a Chore</h3>
+		<input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
+		<div class="form-group">
+			<label for="chore_name">Name:</label>
+			<input type="text" class="form-control">
+		</div>
+		<div class="form-group">
+			<label for="chore_description">Description:</label>
+			<textarea class="form-control" rows="4"></textarea>
+		</div>
+		<div class="form-group">
+			<label for="chore_rate">Rate:</label>
+			<input type="number" step="0.01" class="form-control">
+		</div>
+		<div class="form-group">
+			<label for="chore_start">Start: </label>
+			<input type="datetime-local" value="2016-01-01T00:00:00"class="form-control">
+		</div>
+		<div class="form-group">
+			<label for="chore_end">End: </label>
+			<input type="datetime-local" value="2016-01-01T00:00:00" class="form-control">
+		</div>
+		 <button type="submit" class="btn btn-default">Submit</button>
+	</form>
+	<table class="table table-bordered">
+		<h3>List of Chores</h3>
+		<thead>
+			<tr>
+				<th>Name</th>
+				<th>Status</th>
+				<th>Action</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>test</td>
+				<td>test</td>
+				<td>test</td>
+			</tr>
+		</tbody>
+	</table>
+</body>
+</html>
