--- a/app/views/contractors/index.html.erb
+++ b/app/views/contractors/index.html.erb
@@ -1,2 +1,82 @@
-<h1>Contractors#index</h1>
-<p>Find me in app/views/contractors/index.html.erb</p>
+<!-- Navigation -->
+<nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+    <div class="container topnav">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand topnav" href="#">Home</a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="#about">About</a>
+                </li>
+                <li>
+                    <a href="#services">Services</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+</nav>
+
+
+
+<div class="container topnav" style="padding-top:50px;">
+
+<!-- <div class="contractor" style="padding-top:50px;">
+ -->
+ 
+<div class="panel panel-default">
+<!-- Default panel contents -->
+	<div class="panel-heading">Your Profile (Contractor's)</div>
+	<div class="panel-body">
+		<p>Accepted Chores</p>
+		<table class="table" style="width:400px;">
+			<thead>
+				<tr>
+					<th>Name</th>
+					<th>Status/Action</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td><a href="">Mow the lawn</a></td>
+					<td>pending</td>
+				</tr>
+			</tbody>
+		</table>  
+	</div>
+	<div class="panel-body">
+		<p>Pending Chores</p>
+		<table class="table" style="width:400px;">
+			<thead>
+				<tr>
+					<th>Name</th>
+					<th>Status/Action</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td><a href="">Walk the dog</a></td>
+					<td>pending</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+</div>
+</div>
+
+
+
+
