Added contractor chore show

--- a/app/views/contractors/index.html.erb
+++ b/app/views/contractors/index.html.erb
@@ -31,12 +31,17 @@
 </nav>
 
 
-
-<div class="container topnav" style="padding-top:50px;">
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Contractor Profile</title>
+</head>
+<body>
+<div class="container" style="padding-top:50px;">
 
 <!-- <div class="contractor" style="padding-top:50px;">
  -->
- 
+
 <div class="panel panel-default">
 <!-- Default panel contents -->
 	<div class="panel-heading">Your Profile (Contractor's)</div>
@@ -76,6 +81,8 @@
 	</div>
 </div>
 </div>
+</body>
+</html>
 
 
 
