--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -4,28 +4,33 @@
 	<title></title>
 </head>
 <body>
-	<form action="/clients" method="post">
+	<form action="/chores" method="post">
+		<% if flash[:addchore_errors] %>
+            <% flash[:addchore_errors].each do |error| %> 
+                <h4 class='errors'><li><%= error %></li></h4>
+            <% end %>
+        <% end %>
 		<h3>Add a Chore</h3>
 		<input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
 		<div class="form-group">
 			<label for="chore_name">Name:</label>
-			<input type="text" class="form-control">
+			<input type="text" name="chore[title]" class="form-control">
 		</div>
 		<div class="form-group">
 			<label for="chore_description">Description:</label>
-			<textarea class="form-control" rows="4"></textarea>
+			<textarea name="chore[description]" class="form-control" rows="4"></textarea>
 		</div>
 		<div class="form-group">
 			<label for="chore_rate">Rate:</label>
-			<input type="number" step="0.01" class="form-control">
+			<input type="number" step="0.01" name="chore[rate]" class="form-control">
 		</div>
 		<div class="form-group">
 			<label for="chore_start">Start: </label>
-			<input type="datetime-local" value="2016-01-01T00:00:00"class="form-control">
+			<input type="datetime-local" name="chore[start]" value="2016-01-01T00:00:00"class="form-control">
 		</div>
 		<div class="form-group">
 			<label for="chore_end">End: </label>
-			<input type="datetime-local" value="2016-01-01T00:00:00" class="form-control">
+			<input type="datetime-local" name="chore[end]" value="2016-01-01T00:00:00" class="form-control">
 		</div>
 		 <button type="submit" class="btn btn-default">Submit</button>
 	</form>
@@ -39,11 +44,15 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr>
-				<td>test</td>
-				<td>test</td>
-				<td>test</td>
-			</tr>
+			<% if @client_chores %>
+				<tr>
+				<%  @client_chores.each do |chore| %>
+					<td><a href='/clients/<%= chore.id %>'><%= chore.title %></a></td>
+					<td>test</td>
+					<td><a href='/clients/<%= chore.id %>/edit'>Edit</a></td>
+				</tr>
+				<% end %>
+			<% end %>	
 		</tbody>
 	</table>
 </body>
