--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,2 +1,26 @@
-<h1>Clients#new</h1>
-<p>Find me in app/views/clients/new.html.erb</p>
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+	<h2>Register:</h2>
+	<% if flash[:regerrors] %>
+		<% flash[:regerrors].each do |error| %> 
+			<h4 class='errors'><li><%= error %></li></h4>
+		<% end %>
+	<% end %>
+	<form action='/clients' method='post'>
+        <input name='authenticity_token' value='<%= form_authenticity_token %>' type='hidden'>
+        <p>Name: <input type='text' name='client[name]'></p>
+        <p>Email: <input type='text' name='client[email]'></p>
+        <p>Address: <input type='text' name='client[address]'></p>
+        <p>City: <input type='text' name='client[city]'> State: <%= render 'layouts/states' %></p>
+        <!-- <p>State <input type='text' name='client[state]'></p> -->
+        <p>Password: <input type='password' name='client[password]'></p>
+        <p>*Password should be at least 8 characters</p>
+        <p>Confirm Password: <input type='password' name='client[password_confirmation]'></p>
+        <input type='submit' value='Register'>
+    </form>
+</body>
+</html>
