updated google api

--- a/app/assets/stylesheets/chrores.css.scss
+++ b/app/assets/stylesheets/chrores.css.scss
@@ -1,3 +1,42 @@
 // Place all the styles related to the Chrores controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+/**{
+	overflow: hidden;
+}*/
+#floating-panel {
+	position: absolute;
+	top: 5px;
+	right: 20px;
+}
+
+#chores {
+	/*border: 1px solid black;
+	padding-top: 10px;*/
+/*	height: 800px;*/
+	text-align: center;
+	border-bottom: 1px solid lightgrey;
+}
+
+.nopadding1 {
+   /*padding-left: 0 !important;*/
+   padding-right: 0 !important;
+
+   margin: 0 !important;
+}
+.nopadding2 {
+   /*padding-left: 0 !important;*/
+   padding-left: 0 !important;
+ 
+   margin: 0 !important;
+}
+
+html, body
+{
+    height: 100%;
+}
+
+#content{
+		height: 100%;
+		width: 100%;
+}
