--- a/app/assets/stylesheets/chrores.css.scss
+++ b/app/assets/stylesheets/chrores.css.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the Chrores controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#floating-panel {
+	position: absolute;
+	top: 5px;
+	right: 20px;
+}
