--- a/app/assets/stylesheets/clients.css.scss
+++ b/app/assets/stylesheets/clients.css.scss
@@ -10,3 +10,12 @@
 .btn-default{
 	margin-left: 230px
 }
+#add_chore{
+	display: inline-block;
+	vertical-align: top;
+	margin-right: 100px;
+}
+#chore_list{
+	display: inline-block;
+	vertical-align: top;
+}
