--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -4,56 +4,76 @@
 	<title></title>
 </head>
 <body>
-	<form action="/chores" method="post">
-		<% if flash[:addchore_errors] %>
-            <% flash[:addchore_errors].each do |error| %> 
-                <h4 class='errors'><li><%= error %></li></h4>
-            <% end %>
-        <% end %>
-		<h3>Add a Chore</h3>
-		<input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
-		<div class="form-group">
-			<label for="chore_name">Name:</label>
-			<input type="text" name="chore[title]" class="form-control">
+	<div class="container" style="padding-top:50px;">
+	<div class="panel panel-default">
+	<div class="panel-heading">Your Profile (Client's)</div>
+	<div class="panel-body">
+		<div id="add_chore">
+			<form action="/chores" method="post">
+				<% if flash[:errors] %>
+		            <% flash[:errors].each do |error| %> 
+		                <h4 class='errors'><li><%= error %></li></h4>
+		            <% end %>
+		        <% end %>
+				<h4>Add a Chore</h4>
+				<input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
+				<div class="form-group">
+					<label for="chore_name">Name:</label>
+					<input type="text" name="chore[title]" class="form-control">
+				</div>
+				<div class="form-group">
+					<label for="chore_description">Description:</label>
+					<textarea name="chore[description]" class="form-control" rows="4"></textarea>
+				</div>
+				<div class="form-group">
+					<label for="chore_name">Address:</label>
+					<input type="text" name="chore[address]" value='<%= @client.address %>'class="form-control">
+				</div>
+				<div class="form-group">
+					<label for="chore_city">City:</label>
+					<input type="text" name="chore[city]" value='<%= @client.city %>'class="form-control">
+					State: <p><%= render 'layouts/states' %></p>
+				</div>
+				<div class="form-group">
+					<label for="chore_rate">Rate:</label>
+					<input type="number" step="0.01" name="chore[rate]" class="form-control">
+				</div>
+				<div class="form-group">
+					<label for="chore_start">Start: </label>
+					<input type="datetime-local" name="chore[start]" value="2016-01-01T00:00:00"class="form-control">
+				</div>
+				<div class="form-group">
+					<label for="chore_end">End: </label>
+					<input type="datetime-local" name="chore[end]" value="2016-01-01T00:00:00" class="form-control">
+				</div>
+				 <button type="submit" class="btn btn-default">Submit</button>
+			</form>
 		</div>
-		<div class="form-group">
-			<label for="chore_description">Description:</label>
-			<textarea name="chore[description]" class="form-control" rows="4"></textarea>
+		<div id="chore_list">
+			<table class="table table-bordered">
+				<h4>List of Chores</h4>
+				<thead>
+					<tr>
+						<th>Name</th>
+						<th>Status</th>
+						<th>Action</th>
+					</tr>
+				</thead>
+				<tbody>
+					<% if @client_chores %>
+						<tr>
+						<%  @client_chores.each do |chore| %>
+							<td><a href='/clients/<%= chore.id %>'><%= chore.title %></a></td>
+							<td><%= chore.status %></td>
+							<td><a href='/clients/<%= chore.id %>/edit'>Edit</a> | <a href='/chores/<%= chore.id %>' data-method='delete' data-confirm='Are you sure?'>Delete</a></td>
+						</tr>
+						<% end %>
+					<% end %>	
+				</tbody>
+			</table>
 		</div>
-		<div class="form-group">
-			<label for="chore_rate">Rate:</label>
-			<input type="number" step="0.01" name="chore[rate]" class="form-control">
-		</div>
-		<div class="form-group">
-			<label for="chore_start">Start: </label>
-			<input type="datetime-local" name="chore[start]" value="2016-01-01T00:00:00"class="form-control">
-		</div>
-		<div class="form-group">
-			<label for="chore_end">End: </label>
-			<input type="datetime-local" name="chore[end]" value="2016-01-01T00:00:00" class="form-control">
-		</div>
-		 <button type="submit" class="btn btn-default">Submit</button>
-	</form>
-	<table class="table table-bordered">
-		<h3>List of Chores</h3>
-		<thead>
-			<tr>
-				<th>Name</th>
-				<th>Status</th>
-				<th>Action</th>
-			</tr>
-		</thead>
-		<tbody>
-			<% if @client_chores %>
-				<tr>
-				<%  @client_chores.each do |chore| %>
-					<td><a href='/clients/<%= chore.id %>'><%= chore.title %></a></td>
-					<td>test</td>
-					<td><a href='/clients/<%= chore.id %>/edit'>Edit</a></td>
-				</tr>
-				<% end %>
-			<% end %>	
-		</tbody>
-	</table>
+	</div>
+	</div>
+	</div>
 </body>
 </html>
