--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -4,23 +4,29 @@
 	<title></title>
 </head>
 <body>
-	<h2>Register:</h2>
-	<% if flash[:regerrors] %>
-		<% flash[:regerrors].each do |error| %> 
-			<h4 class='errors'><li><%= error %></li></h4>
-		<% end %>
-	<% end %>
-	<form action='/clients' method='post'>
-        <input name='authenticity_token' value='<%= form_authenticity_token %>' type='hidden'>
-        <p>Name: <input type='text' name='client[name]'></p>
-        <p>Email: <input type='text' name='client[email]'></p>
-        <p>Address: <input type='text' name='client[address]'></p>
-        <p>City: <input type='text' name='client[city]'> State: <%= render 'layouts/states' %></p>
-        <!-- <p>State <input type='text' name='client[state]'></p> -->
-        <p>Password: <input type='password' name='client[password]'></p>
-        <p>*Password should be at least 8 characters</p>
-        <p>Confirm Password: <input type='password' name='client[password_confirmation]'></p>
-        <input type='submit' value='Register'>
-    </form>
+    <div class="container" style="padding-top:50px;">
+    <div class="panel panel-default">
+    <div class="panel-heading"><h2>Register:</h2></div>
+    <div class="panel-body">
+    	<% if flash[:errors] %>
+    		<% flash[:errors].each do |error| %> 
+    			<h4 class='errors'><li><%= error %></li></h4>
+    		<% end %>
+    	<% end %>
+    	<form action='/clients' method='post'>
+            <input name='authenticity_token' value='<%= form_authenticity_token %>' type='hidden'>
+            <p>Name: <input type='text' name='client[name]'></p>
+            <p>Email: <input type='text' name='client[email]'></p>
+            <p>Address: <input type='text' name='client[address]'></p>
+            <p>City: <input type='text' name='client[city]'> State: <%= render 'layouts/states' %></p>
+            <!-- <p>State <input type='text' name='client[state]'></p> -->
+            <p>Password: <input type='password' name='client[password]'></p>
+            <p>*Password should be at least 8 characters</p>
+            <p>Confirm Password: <input type='password' name='client[password_confirmation]'></p>
+            <input type='submit' value='Register'>
+        </form>
+    </div>
+    </div>
+    </div>
 </body>
 </html>
