--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand topnav" href="#">Home</a>
+            <a class="navbar-brand topnav" href="">Home</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -23,6 +23,36 @@
                 </li>
                 <li>
                     <a href="#contact">Contact</a>
+                </li>
+                <li>
+                    <% if current_user  %>
+                        <a href='/sessions/<%= session[:user_id] %>'data-method='delete'>Logout</a>
+                    <% else %>
+                        <li class="dropdown" id="menuLogin">
+                        <a class="dropdown-toggle" href="#" data-toggle="dropdown" id="navLogin">Login</a>
+                        <div class="dropdown-menu" style="padding:17px;">
+                          <form action='/sessions' method='post' class="form" id="formLogin">
+                            <input name='authenticity_token' value='<%= form_authenticity_token %>' type='hidden'> 
+                            <label for="Email">Email: </label>
+                            <input type="email" placeholder="Email" name='client[email]'>
+                            <p><label for="Password">Password: </label>
+                            <input type="password" placeholder="Password" name='client[password]'></p>
+                            <div class="radio">
+                              <label>
+                                <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+                                Login as client
+                              </label>
+                            </div>
+                            <div class="radio">
+                              <label>
+                                <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+                                Login as contractor
+                              </label>
+                            </div>
+                            <input type="submit" value='Login'>
+                          </form>
+                        </div>
+                    <% end %>
                 </li>
             </ul>
         </div>
