--- a/app/views/layouts/_states.html.erb
+++ b/app/views/layouts/_states.html.erb
@@ -1,4 +1,10 @@
-<select name="client[state]">
+
+    <% if current_user  %>
+    <select name="chore[state]">
+    <option value='<%= Client.find(session[:user_id]).state %>'><%= Client.find(session[:user_id]).state %></option>
+    <% else %>
+    <select name="client[state]">
+    <% end %>
     <option value="AL">AL</option>
     <option value="AK">AK</option>
     <option value="AZ">AZ</option>
