--- a/app/views/chores/show.html.erb
+++ b/app/views/chores/show.html.erb
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 
 <!DOCTYPE html>
 <html>
@@ -16,32 +15,28 @@
 			<div class="panel-heading">Selected Chore</div>
 			<div class="panel-body">
 				<table class="table" style="width:400px;">
+
 					<tr>
 						<th>Name:</th>
-						<td>Mow the lawn</td>
+						<td><%= @chore.title %></td>
 					</tr>					
 					<tr>
 						<th>Description:</th>
-						<td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</td>
+						<td><%= @chore.description %></td>
 					</tr>
 					<tr>
 						<th>Rate:</th>
-						<td>$10.00</td>
+						<td>$<%= @chore.rate %></td>
 					</tr>
 
 				</table>
 				<div class="accept_back_buttons">
 					<form action='/requests' method='post' style="display:inline-block;">
-					<input type='hidden' name='authenticity_token' value='<%= form_authenticity_token %>'>
-					<input type='hidden' name='' value=''>
-					<button type='submit'>Accept</button>&nbsp;
+						<input type='hidden' name='authenticity_token' value='<%= form_authenticity_token %>'>
+						<input type='hidden' name='' value=''>
+						<button type='submit'>Accept</button>&nbsp;
 					</form>
-					<form action='/contractors/' method='get' style="display:inline-block;">
-					<input type='hidden' name='authenticity_token' value='<%= form_authenticity_token %>'>
-					<input type='hidden' name='' value=''>
-					<button type='submit'>Back</button>
-					</form>
+					<a href="/contractors">Back</a>
 				</div>
 			</div>
 			</div>
@@ -50,9 +45,3 @@
 </div>
 </body>
 </html>
-
-
-=======
-<h1>Chores#show</h1>
-<p>Find me in app/views/chores/show.html.erb</p>
->>>>>>> master
