All the contractor tables and accept links in chores work correctly

--- a/app/views/contractors/index.html.erb
+++ b/app/views/contractors/index.html.erb
@@ -11,7 +11,10 @@
 
 <div class="panel panel-default">
 <!-- Default panel contents -->
-	<div class="panel-heading">Your Profile (Contractor's)</div>
+	<div class="panel-heading">
+		<h3>Hello, <%= @contractor.name %>!</h3>
+		<h5>Contractor Profile</h5>
+	</div>
 	<div class="panel-body">
 		<p>Accepted Chores</p>
 		<table class="table" style="width:400px;">
