--- a/app/views/chores/show.html.erb
+++ b/app/views/chores/show.html.erb
@@ -15,7 +15,6 @@
 			<div class="panel-heading">Selected Chore</div>
 			<div class="panel-body">
 				<table class="table" style="width:400px;">
-
 					<tr>
 						<th>Name:</th>
 						<td><%= @chore.title %></td>
@@ -26,16 +25,21 @@
 					</tr>
 					<tr>
 						<th>Rate:</th>
-						<td>$<%= @chore.rate %></td>
+						<td><%= number_to_currency(@chore.rate) %></td>
 					</tr>
-
 				</table>
 				<div class="accept_back_buttons">
-					<form action='/requests' method='post' style="display:inline-block;">
+
+					<% if @already_pending.empty? %>
+					<% if @already_accepted.empty? %>
+					<% if @chore.client.id != session[:user_id] %>
+					<form action='/requests/<%= @chore.id %>' method='post' style="display:inline-block;">
 						<input type='hidden' name='authenticity_token' value='<%= form_authenticity_token %>'>
-						<input type='hidden' name='' value=''>
 						<button type='submit'>Accept</button>&nbsp;
-					</form>
+					</form>				
+					<% end %>
+					<% end %>
+					<% end %>
 					<a href="/contractors">Back</a>
 				</div>
 			</div>
