--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -12,39 +12,28 @@
         <% end %>
         <div class="container" style="padding-top:50px;">
 	    <div class="panel panel-default">
-	    <div class="panel-heading"><h3>Edit Chore</h3><h5>(Status: <%= @client_chore.status %>)</h5></div>
+	    <div class="panel-heading"><h3>Edit profile</h3></div>
 	    <div class="panel-body">
-			<form action="/clients/<%= @client_chore.id%>" method="post">
+			<form action="/clients/<%= @client.id %>" method="post">
 				<input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
 				<input type="hidden" name="_method" value="patch">
 				<div class="form-group">
-					<label for="chore_name">Name:</label>
-					<input type="text" name="chore[title]" value='<%= @client_chore.title %>'class="form-control">
+					<label for="client_name">Name:</label>
+					<input type="text" name="client[name]" value='<%= @client.name %>'class="form-control">
 				</div>
 				<div class="form-group">
-					<label for="chore_description">Description:</label>
-					<textarea name="chore[description]" class="form-control" rows="4"><%= @client_chore.description%></textarea>
+					<label for="client_email">Email:</label>
+					<input type="text" name="client[email]" value='<%= @client.email %>'class="form-control">
 				</div>
 				<div class="form-group">
-						<label for="chore_name">Address:</label>
-						<input type="text" name="chore[address]" value='<%= @client_chore.address %>'class="form-control">
+						<label for="client_name">Address:</label>
+						<input type="text" name="client[address]" value='<%= @client.address %>'class="form-control">
 				</div>
 				<div class="form-group">
-					<label for="chore_city">City:</label>
-					<input type="text" name="chore[city]" value='<%= @client_chore.city %>'class="form-control">
-					State: <p><%= render 'layouts/states' %></p>
-				</div>
-				<div class="form-group">
-					<label for="chore_rate">Rate:</label>
-					<input type="number" step="0.01" name="chore[rate]" value='<%= @client_chore.rate %>' class="form-control"> 
-				</div>
-				<div class="form-group">
-					<label for="chore_start">Start: </label>
-					<input type="datetime-local" name="chore[start]" value='<%= @client_chore.start %>' class="form-control">
-				</div>
-				<div class="form-group">
-					<label for="chore_end">End: </label>
-					<input type="datetime-local" name="chore[end]" value='<%= @client_chore.end %>' class="form-control">
+					<label for="client_city">City:</label>
+					<input type="text" name="client[city]" value='<%= @client.city %>'class="form-control">
+					<label for="client_state" class="client_state">State:</label> 
+					<%= render 'layouts/states' %>
 				</div>
 				 <button type="submit" class="btn btn-default">Update</button>
 			</form>
