--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -4,42 +4,46 @@
 	<title></title>
 </head>
 <body>
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
 	<div class="container" style="padding-top:50px;">
     <div class="panel panel-default">
-    <div class="panel-heading"><h3>Name of Chore:</h3></div>
+    <div class="panel-heading"><h3>Profile:</h3></div>
     <div class="panel-body">
 		<table class="table">
 			<tr>
 				<th>Name: </th>
-				<td><a href='/clients/<%= @client_chore.id %>/edit'><%= @client_chore.title %></a></td>
+				<td><%= @client.name %></a></td>
 			</tr>
 			<tr>
-				<th>Status: </th>
-				<td><%= @client_chore.status%></td>
+				<th>Email: </th>
+				<td><%= @client.email %></td>
 			</tr>
 			<tr>
-				<th>Description: </th>
-				<td><%= @client_chore.description %></td>
+				<th>Address: </th>
+				<td><%= @client.address %></td>
 			</tr>
 			<tr>
-				<th>Rate: </th>
-				<td>$ <%= @client_chore.rate %></td>
+				<th>City: </th>
+				<td><%= @client.city %></td>
 			</tr>
 			<tr>
-				<th>Start: </th>
-				<td><%= @client_chore.start %></td>
-			</tr>
-			<tr>
-				<th>End: </th>
-				<td><%= @client_chore.end %></td>
+				<th>State: </th>
+				<td><%= @client.state %></td>
 			</tr>
 			<tr>
 				<th></th>
-				<td><a href='/chores/<%= @client_chore.id %>' data-method='delete' data-confirm='Are you sure?'>Delete</a></td>
+				<td><a href='/clients/<%= @client.id %>/edit'>Edit Profile</a></td>
 			</tr>
 		</table>
 	</div>
 	</div>
 	</div>
+</body>
+</html>
 </body>
 </html>
