--- a/app/views/layouts/_states.html.erb
+++ b/app/views/layouts/_states.html.erb
@@ -1,9 +1,9 @@
 
     <% if current_user  %>
-    <select name="chore[state]">
+    <select class="form-control" name="chore[state]">
     <option value='<%= Client.find(session[:user_id]).state %>'><%= Client.find(session[:user_id]).state %></option>
     <% else %>
-    <select name="client[state]">
+    <select class="form-control" name="client[state]">
     <% end %>
     <option value="AL">AL</option>
     <option value="AK">AK</option>
