--- a/app/views/chores/edit.html.erb
+++ b/app/views/chores/edit.html.erb
@@ -1,2 +1,57 @@
-<h1>Chores#edit</h1>
-<p>Find me in app/views/chores/edit.html.erb</p>
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+	<div class="container">
+		<% if flash[:errors] %>
+            <% flash[:errors].each do |error| %> 
+                <h4 class='errors'><li><%= error %></li></h4>
+            <% end %>
+        <% end %>
+        <div class="container" style="padding-top:50px;">
+	    <div class="panel panel-default">
+	    <div class="panel-heading"><h3>Edit Chore</h3><h5>(Status: <%= @client_chore.status %>)</h5></div>
+	    <div class="panel-body">
+			<form action="/chores/<%= @client_chore.id%>/update" method="post">
+				<input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
+				<input type="hidden" name="_method" value="patch">
+				<div class="form-group">
+					<label for="chore_name">Name:</label>
+					<input type="text" name="chore[title]" value='<%= @client_chore.title %>'class="form-control">
+				</div>
+				<div class="form-group">
+					<label for="chore_description">Description:</label>
+					<textarea name="chore[description]" class="form-control" rows="4"><%= @client_chore.description%></textarea>
+				</div>
+				<div class="form-group">
+						<label for="chore_name">Address:</label>
+						<input type="text" name="chore[address]" value='<%= @client_chore.address %>'class="form-control">
+				</div>
+				<div class="form-group">
+					<label for="chore_city">City:</label>
+					<input type="text" name="chore[city]" value='<%= @client_chore.city %>'class="form-control">
+					<label for="chore_state" class="chore_state">State:</label> 
+					<%= render 'layouts/states' %>
+				</div>
+				<div class="form-group">
+					<label for="chore_rate">Rate:</label>
+					<input type="number" step="0.01" name="chore[rate]" value='<%= @client_chore.rate %>' class="form-control"> 
+				</div>
+				<div class="form-group">
+					<label for="chore_start">Start: </label>
+					<input type="datetime-local" name="chore[start]" value='<%= @client_chore.start %>' class="form-control">
+				</div>
+				<div class="form-group">
+					<label for="chore_end">End: </label>
+					<input type="datetime-local" name="chore[end]" value='<%= @client_chore.end %>' class="form-control">
+				</div>
+				 <button type="submit" class="btn btn-default">Update</button>
+			</form>
+		</div>
+		</div>
+		</div>	
+	</div>
+</body>
+</html>
