--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -6,7 +6,7 @@
 <body>
     <div class="container" style="padding-top:50px;">
     <div class="panel panel-default">
-    <div class="panel-heading"><h2>Register:</h2></div>
+    <div class="panel-heading"><h2>Register:</h2><a href='/'>Back</a></div>
     <div class="panel-body">
     	<% if flash[:errors] %>
     		<% flash[:errors].each do |error| %> 
