--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,25 +10,32 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand topnav" href="">Home</a>
+
+            <form action="/" action="get">
+                <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
+                <input type='image' src="/assets/swept1.png" class="img-responsive" width='180' height='90' alt='Home'>
+            </form>
+            
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="#about">About</a>
+                    <a class="navbar-brand topnav" href="/chores">Chores</a>
                 </li>
                 <li>
-                    <a href="#services">Services</a>
+                    <% if session[:login_type] == "option1" %>
+                        <a class="navbar-brand topnav" href="/clients">Dashboard</a>
+                        <% else %>
+                        <a class="navbar-brand topnav" href="/contractors">Dashboard</a>
+                    <% end %>
                 </li>
                 <li>
-                    <a href="#contact">Contact</a>
+                    <a class="navbar-brand topnav" href="/clients/<%= session[:user_id] %>">Profile</a>
                 </li>
                 <li>
-                    <% if current_user  %>
-                        <a href='/sessions/<%= session[:user_id] %>'data-method='delete'>Logout</a>
-                    <% else %>
-                        <li class="dropdown" id="menuLogin">
+                    <% if !current_user %>
+                    <li class="dropdown" id="menuLogin">
                         <a class="dropdown-toggle" href="#" data-toggle="dropdown" id="navLogin">Login</a>
                         <div class="dropdown-menu" style="padding:17px;">
                           <form action='/sessions' method='post' class="form" id="formLogin">
@@ -38,21 +45,25 @@
                             <p><label for="Password">Password: </label>
                             <input type="password" placeholder="Password" name='client[password]'></p>
                             <div class="radio">
+                                Login as:
                               <label>
                                 <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
-                                Login as client
+                                Client
                               </label>
                             </div>
                             <div class="radio">
                               <label>
                                 <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-                                Login as contractor
+                                Contractor
                               </label>
                             </div>
                             <input type="submit" value='Login'>
                           </form>
                         </div>
-                    <% end %>
+                    </li>
+                <% else %>
+                    <a class="navbar-brand topnav" href='/sessions/<%= session[:user_id] %>'data-method='delete'>Logout</a>
+                <% end %>    
                 </li>
             </ul>
         </div>
