--- a/app/assets/stylesheets/chores.css.scss
+++ b/app/assets/stylesheets/chores.css.scss
@@ -50,3 +50,25 @@ html, body
 		height: 100%;
 		width: 100%;
 }
+
+/*#iw-container  .iw-title {
+   font-family: 'Open Sans Condensed', sans-serif;
+   font-size: 22px;
+   font-weight: 400;
+   padding: 10px;
+   background-color: #48b5e9;
+   color: white;
+   margin: 1px;
+   border-radius: 2px 2px 0 0; 
+}*/
+/*.gm-style-iw {
+   width: 350px !important;
+   top: 15px !important;
+   left: 0 !important;
+   background-color: #fff;
+   box-shadow: 0 1px 6px rgba(178, 178, 178, 0.6);
+   border: 1px solid rgba(72, 181, 233, 0.6);
+   border-radius: 2px 2px 10px 10px; // apply 10px to the bottom corners of the infowindow
+}
+*/
+
