final updates for client/chore pages

--- a/app/views/chores/edit.html.erb
+++ b/app/views/chores/edit.html.erb
@@ -41,11 +41,11 @@
 				</div>
 				<div class="form-group">
 					<label for="chore_start">Start: </label>
-					<input type="datetime-local" name="chore[start]" value='<%= @client_chore.start %>' class="form-control">
+					<input type="datetime-local" name="chore[start]" value='<%= @start_time.strftime("%Y-%m-%dT%I:%M") %>' class="form-control">
 				</div>
 				<div class="form-group">
 					<label for="chore_end">End: </label>
-					<input type="datetime-local" name="chore[end]" value='<%= @client_chore.end %>' class="form-control">
+					<input type="datetime-local" name="chore[end]" value='<%= @end_time.strftime("%Y-%m-%dT%I:%M")  %>' class="form-control">
 				</div>
 				 <button type="submit" class="btn btn-default">Update</button>
 			</form>
