--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -45,11 +45,11 @@
 				</div>
 				<div class="form-group">
 					<label for="chore_start">Start: </label>
-					<input type="datetime-local" name="chore[start]" value="2016-01-01T00:00:00"class="form-control">
+					<input type="datetime-local" name="chore[start]" value="<%= @time.strftime("%Y-%m-%dT%I:%M") %>" class="form-control">
 				</div>
 				<div class="form-group">
 					<label for="chore_end">End: </label>
-					<input type="datetime-local" name="chore[end]" value="2016-01-01T00:00:00" class="form-control">
+					<input type="datetime-local" name="chore[end]" value="<%= @time.strftime("%Y-%m-%dT%I:%M") %>" class="form-control">
 				</div>
 				 <button type="submit" class="btn btn-default">Submit</button>
 			</form>
